multi-role sync update: 2026-02-23 10:38

--- a/data/openclaw/tasks.json
+++ b/data/openclaw/tasks.json
@@ -1,122 +1,382 @@
 {
-  "updated_at": "2026-02-22T15:46:26Z",
+  "updated_at": "2026-02-23T10:38:38Z",
   "tasks": [
     {
-      "title": "cron 每日任務自動化（重設狀態）",
+      "title": "台積電J值追蹤提醒",
       "status": "已完成",
-      "next_step": "launchd 已載入，每日 06:00 自動執行 daily_reset.py + push",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
-      "priority": "important",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T15:18:05Z"
-    },
-    {
-      "title": "NotebookLM Skill 開發",
-      "status": "待處理",
-      "next_step": "規劃草稿在 dev/notebooklm-skill.md",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T15:15:00Z"
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "Mac備忘錄AI轉運分析處理",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "郵件分類檢查-下午",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "確認明晚行程",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "郵件附件監看",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "每日Token使用記錄",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "記憶體優化提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "AI記憶與配置自動備份",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "iCloud整理檢測_0310",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "iCloud安全整理_0330",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "daily_dashboard_update",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "自我檢測",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "每日美股台股匯報",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "工作流每日檢查_0810",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "郵件分類檢查-早上",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "0050 J值買點提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "BNI簡報與key單準備提醒",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "散熱族群股價追蹤(早)",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "週五過濾材提醒-動態",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "散熱族群股價追蹤",
+      "status": "阻塞",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "cron announce delivery failed",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
     },
     {
       "title": "記憶檔案每月歸檔",
       "status": "待處理",
-      "next_step": "每月 1 日將上月日誌移入 archive/daily/",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "2026/3/1",
-      "time": "-",
-      "freq": "monthly",
-      "updated_at": "2026-02-22T15:15:00Z"
-    },
-    {
-      "title": "儀表板視覺老花優化",
-      "status": "已完成",
-      "next_step": "dim#4A4A48、muted#7A7A78、手機字體全面放大、font-weight:400",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T15:15:00Z"
+      "updated_at": "2026-02-23T10:38:38Z"
     },
     {
-      "title": "個人財務 30天流水帳明細",
+      "title": "兆鯨資料每日同步與索引",
       "status": "已完成",
-      "next_step": "含收支摘要、主頁大總管通知 accordion",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T15:15:00Z"
+      "updated_at": "2026-02-23T10:38:38Z"
     },
     {
-      "title": "大總管統一推送機制",
+      "title": "工作流週一檢查_0840",
       "status": "已完成",
-      "next_step": "其他角色不加 --push，由大總管統一 push.sh",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T15:15:00Z"
+      "updated_at": "2026-02-23T10:38:38Z"
     },
     {
-      "title": "線上儀表板 GitHub Pages 部署",
+      "title": "才多多週會重點確認提醒",
       "status": "已完成",
-      "next_step": "dashboard.changsung.uk 上線，scripts/push.sh 自動同步",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T15:15:00Z"
+      "updated_at": "2026-02-23T10:38:38Z"
     },
     {
-      "title": "記憶分層架構 INDEX.md + topics/",
+      "title": "三年免招募費專案追蹤提醒",
       "status": "已完成",
-      "next_step": "-",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T15:15:00Z"
+      "updated_at": "2026-02-23T10:38:38Z"
     },
     {
-      "title": "qmd 精準檢索設定",
+      "title": "OpenClaw 每週版本檢查",
       "status": "已完成",
-      "next_step": "省約 90% tokens，指令：qmd query / get / update",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T15:15:00Z"
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "每月定期定額規劃",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "才多多財務分析月報更新",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
+    },
+    {
+      "title": "農曆三月劫財月-台積電買點提醒",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:38:38Z"
     }
   ]
 }
