--- a/data/zhaojing/tasks.json
+++ b/data/zhaojing/tasks.json
@@ -1,148 +1,18 @@
 {
-  "updated_at": "2026-02-22T15:36:44Z",
+  "updated_at": "2026-02-23T10:38:38Z",
   "tasks": [
     {
       "title": "兆鯨資料每日同步與索引",
-      "status": "阻塞",
-      "next_step": "-",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
-      "priority": "urgent",
-      "type": "task",
-      "due": "-",
-      "time": "08:00",
-      "freq": "daily",
-      "updated_at": "2026-02-22T05:41:14Z"
-    },
-    {
-      "title": "王原浦 2-1-1 合約到期催簽",
-      "status": "阻塞",
-      "next_step": "協商缺口：開25K/底22K/對方出20K",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "缺口尚未達成共識",
-      "priority": "urgent",
-      "type": "alert",
-      "due": "2026/2/28",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
-    },
-    {
-      "title": "謝瑾君 2-2 合約到期催簽",
       "status": "已完成",
-      "next_step": "2/23 已簽約",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
-      "priority": "urgent",
-      "type": "alert",
-      "due": "2026/2/28",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T15:36:44Z"
-    },
-    {
-      "title": "程進龍 永二街8-2 欠租追繳",
-      "status": "待處理",
-      "next_step": "三月討論欠款 $20,000",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
-      "priority": "urgent",
-      "type": "alert",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
-    },
-    {
-      "title": "趙朝陽 74巷3號 無合約書",
-      "status": "待處理",
-      "next_step": "補簽合約",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
-      "priority": "important",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
-    },
-    {
-      "title": "74巷14號 招租中（591刊登）",
-      "status": "待處理",
-      "next_step": "追蹤591刊登狀況",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
-      "priority": "important",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
-    },
-    {
-      "title": "方宣甯 裕忠路17號 90天內到期",
-      "status": "待處理",
-      "next_step": "準備簽約 2/23 前確認",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
-      "priority": "important",
-      "type": "alert",
-      "due": "2026/4/30",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
-    },
-    {
-      "title": "林瑞芳 2-1-2 電費未收",
-      "status": "待處理",
-      "next_step": "催收電費 $98,260",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
+      "next_step": "",
+      "owner_role": "昌松",
+      "blocked_reason": "",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
-    },
-    {
-      "title": "謝達源 2-1-3 電費爭議",
-      "status": "待處理",
-      "next_step": "確認爭議內容並處理",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
-    },
-    {
-      "title": "馬鉻辰 永二街8-6 電費未收",
-      "status": "待處理",
-      "next_step": "催收電費 $47,245",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
-    },
-    {
-      "title": "王虞鈞 胜利70 電話異常",
-      "status": "待處理",
-      "next_step": "確認電話是否可聯絡",
-      "owner_role": "兆鯨顧問",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-22T05:41:14Z"
+      "updated_at": "2026-02-23T10:38:38Z"
     }
   ]
 }
