--- a/data/caitodo/tasks.json
+++ b/data/caitodo/tasks.json
@@ -1,44 +1,8 @@
 {
-  "updated_at": "2026-02-23T10:38:38Z",
+  "updated_at": "2026-02-22T05:41:14Z",
   "tasks": [
-    {
-      "title": "才多多週會重點確認提醒",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "HR",
-      "blocked_reason": "",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T10:38:38Z"
-    },
-    {
-      "title": "三年免招募費專案追蹤提醒",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "HR",
-      "blocked_reason": "",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T10:38:38Z"
-    },
-    {
-      "title": "才多多財務分析月報更新",
-      "status": "待處理",
-      "next_step": "",
-      "owner_role": "HR",
-      "blocked_reason": "",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T10:38:38Z"
-    }
+    { "title": "才多多週會重點確認提醒",   "status": "待處理", "next_step": "-", "owner_role": "才多多", "blocked_reason": "-", "priority": "important", "type": "alert", "due": "-", "time": "-", "freq": "weekly", "updated_at": "2026-02-22T05:41:14Z" },
+    { "title": "三年免招募費專案追蹤提醒", "status": "待處理", "next_step": "-", "owner_role": "才多多", "blocked_reason": "-", "priority": "normal",    "type": "alert", "due": "-", "time": "-", "freq": "-",      "updated_at": "2026-02-22T05:41:14Z" },
+    { "title": "BNI簡報與key單準備提醒",   "status": "待處理", "next_step": "-", "owner_role": "才多多", "blocked_reason": "-", "priority": "normal",    "type": "alert", "due": "-", "time": "-", "freq": "-",      "updated_at": "2026-02-22T05:41:14Z" }
   ]
 }
