--- a/data/finance/tasks.json
+++ b/data/finance/tasks.json
@@ -1,70 +1,122 @@
 {
-  "updated_at": "2026-02-23T10:38:38Z",
+  "updated_at": "2026-02-22T15:17:45Z",
   "tasks": [
     {
-      "title": "台積電J值追蹤提醒",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "理財助",
-      "blocked_reason": "",
-      "priority": "normal",
-      "type": "task",
+      "title": "每日美股台股匯報",
+      "status": "待處理",
+      "next_step": "-",
+      "owner_role": "理財分析師",
+      "blocked_reason": "-",
+      "priority": "urgent",
+      "type": "alert",
       "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T10:38:38Z"
+      "time": "07:00",
+      "freq": "daily",
+      "updated_at": "2026-02-22T15:17:45Z"
+    },
+    {
+      "title": "週一台積電零股掛單提醒",
+      "status": "待處理",
+      "next_step": "-",
+      "owner_role": "理財分析師",
+      "blocked_reason": "-",
+      "priority": "important",
+      "type": "alert",
+      "due": "-",
+      "time": "09:00",
+      "freq": "weekly-mon",
+      "updated_at": "2026-02-22T05:41:14Z"
     },
     {
       "title": "0050 J值買點提醒",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "理財助",
-      "blocked_reason": "",
-      "priority": "normal",
-      "type": "task",
+      "status": "待處理",
+      "next_step": "-",
+      "owner_role": "理財分析師",
+      "blocked_reason": "-",
+      "priority": "important",
+      "type": "alert",
       "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T10:38:38Z"
+      "time": "09:05",
+      "freq": "daily",
+      "updated_at": "2026-02-22T15:17:45Z"
     },
     {
       "title": "散熱族群股價追蹤(早)",
       "status": "待處理",
-      "next_step": "",
-      "owner_role": "理財助",
-      "blocked_reason": "",
-      "priority": "normal",
-      "type": "task",
+      "next_step": "-",
+      "owner_role": "理財分析師",
+      "blocked_reason": "-",
+      "priority": "important",
+      "type": "alert",
       "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T10:38:38Z"
+      "time": "09:15",
+      "freq": "daily",
+      "updated_at": "2026-02-22T15:17:45Z"
     },
     {
       "title": "散熱族群股價追蹤",
-      "status": "阻塞",
-      "next_step": "",
-      "owner_role": "理財助",
-      "blocked_reason": "cron announce delivery failed",
+      "status": "待處理",
+      "next_step": "-",
+      "owner_role": "理財分析師",
+      "blocked_reason": "-",
+      "priority": "urgent",
+      "type": "alert",
+      "due": "-",
+      "time": "09:30",
+      "freq": "daily",
+      "updated_at": "2026-02-22T15:17:45Z"
+    },
+    {
+      "title": "每月定期定額規劃",
+      "status": "待處理",
+      "next_step": "-",
+      "owner_role": "理財分析師",
+      "blocked_reason": "-",
       "priority": "normal",
       "type": "task",
       "due": "-",
       "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T10:38:38Z"
+      "freq": "monthly",
+      "updated_at": "2026-02-22T05:41:14Z"
+    },
+    {
+      "title": "才多多財務分析月報更新",
+      "status": "待處理",
+      "next_step": "-",
+      "owner_role": "理財分析師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "monthly",
+      "updated_at": "2026-02-22T05:41:14Z"
     },
     {
       "title": "農曆三月劫財月-台積電買點提醒",
       "status": "待處理",
-      "next_step": "",
-      "owner_role": "理財助",
-      "blocked_reason": "",
+      "next_step": "-",
+      "owner_role": "理財分析師",
+      "blocked_reason": "-",
       "priority": "normal",
-      "type": "task",
+      "type": "alert",
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:38:38Z"
+      "updated_at": "2026-02-22T05:41:14Z"
+    },
+    {
+      "title": "台積電J值追蹤提醒",
+      "status": "已完成",
+      "next_step": "-",
+      "owner_role": "理財分析師",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "alert",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T05:41:14Z"
     }
   ]
 }
