multi-role sync update: 2026-02-23 10:53

--- a/data/openclaw/tasks.json
+++ b/data/openclaw/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-22T15:46:26Z",
+  "updated_at": "2026-02-23T10:53:16Z",
   "tasks": [
     {
       "title": "cron 每日任務自動化（重設狀態）",
@@ -25,19 +25,6 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-22T15:15:00Z"
-    },
-    {
-      "title": "記憶檔案每月歸檔",
-      "status": "待處理",
-      "next_step": "每月 1 日將上月日誌移入 archive/daily/",
-      "owner_role": "開發優化師",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "2026/3/1",
-      "time": "-",
-      "freq": "monthly",
       "updated_at": "2026-02-22T15:15:00Z"
     },
     {
@@ -117,6 +104,412 @@
       "time": "-",
       "freq": "-",
       "updated_at": "2026-02-22T15:15:00Z"
+    },
+    {
+      "title": "台積電J值追蹤提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "Mac備忘錄AI轉運分析處理",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "郵件分類檢查-下午",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "確認明晚行程",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "郵件附件監看",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "每日Token使用記錄",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "記憶體優化提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "AI記憶與配置自動備份",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "iCloud整理檢測_0310",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "iCloud安全整理_0330",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "daily_dashboard_update",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "自我檢測",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "每日美股台股匯報",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "工作流每日檢查_0810",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "郵件分類檢查-早上",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "0050 J值買點提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "BNI簡報與key單準備提醒",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "散熱族群股價追蹤(早)",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "週五過濾材提醒-動態",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "散熱族群股價追蹤",
+      "status": "阻塞",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "cron announce delivery failed",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "記憶檔案每月歸檔",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "兆鯨資料每日同步與索引",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "工作流週一檢查_0840",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "才多多週會重點確認提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "三年免招募費專案追蹤提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "OpenClaw 每週版本檢查",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "每月定期定額規劃",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "才多多財務分析月報更新",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "農曆三月劫財月-台積電買點提醒",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
     }
   ]
 }
