--- a/data/caitodo/tasks.json
+++ b/data/caitodo/tasks.json
@@ -1,8 +1,60 @@
 {
-  "updated_at": "2026-02-22T05:41:14Z",
+  "updated_at": "2026-02-23T10:53:16Z",
   "tasks": [
-    { "title": "才多多週會重點確認提醒",   "status": "待處理", "next_step": "-", "owner_role": "才多多", "blocked_reason": "-", "priority": "important", "type": "alert", "due": "-", "time": "-", "freq": "weekly", "updated_at": "2026-02-22T05:41:14Z" },
-    { "title": "三年免招募費專案追蹤提醒", "status": "待處理", "next_step": "-", "owner_role": "才多多", "blocked_reason": "-", "priority": "normal",    "type": "alert", "due": "-", "time": "-", "freq": "-",      "updated_at": "2026-02-22T05:41:14Z" },
-    { "title": "BNI簡報與key單準備提醒",   "status": "待處理", "next_step": "-", "owner_role": "才多多", "blocked_reason": "-", "priority": "normal",    "type": "alert", "due": "-", "time": "-", "freq": "-",      "updated_at": "2026-02-22T05:41:14Z" }
+    {
+      "title": "BNI簡報與key單準備提醒",
+      "status": "待處理",
+      "next_step": "-",
+      "owner_role": "才多多",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "alert",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-22T05:41:14Z"
+    },
+    {
+      "title": "才多多週會重點確認提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "三年免招募費專案追蹤提醒",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    },
+    {
+      "title": "才多多財務分析月報更新",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T10:53:16Z",
+      "source": "auto"
+    }
   ]
 }
