--- a/data/openclaw/tasks.json
+++ b/data/openclaw/tasks.json
@@ -1,5 +1,5 @@
 {
-  "updated_at": "2026-02-23T10:55:33Z",
+  "updated_at": "2026-02-23T14:04:11Z",
   "tasks": [
     {
       "title": "cron 每日任務自動化（重設狀態）",
@@ -116,35 +116,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
-      "source": "auto"
-    },
-    {
-      "title": "Mac備忘錄AI轉運分析處理",
-      "status": "待處理",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
-      "source": "auto"
-    },
-    {
-      "title": "郵件分類檢查-下午",
-      "status": "已完成",
-      "next_step": "",
-      "owner_role": "",
-      "blocked_reason": "-",
-      "priority": "normal",
-      "type": "task",
-      "due": "-",
-      "time": "-",
-      "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -158,7 +130,21 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
+      "source": "auto"
+    },
+    {
+      "title": "Mac備忘錄AI轉運分析處理",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -172,7 +158,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -186,7 +172,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -200,7 +186,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -214,7 +200,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -228,7 +214,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -242,7 +228,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -256,7 +242,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -270,7 +256,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -284,7 +270,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -298,7 +284,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -312,7 +298,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -326,7 +312,35 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
+      "source": "auto"
+    },
+    {
+      "title": "國泰信用卡-LinePay點數扣點提醒",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T14:04:11Z",
+      "source": "auto"
+    },
+    {
+      "title": "郵件分類檢查-下午",
+      "status": "已完成",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -340,7 +354,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -354,7 +368,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -368,7 +382,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -382,7 +396,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -396,7 +410,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -410,7 +424,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -424,7 +438,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -438,7 +452,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -452,7 +466,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -466,7 +480,21 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
+      "source": "auto"
+    },
+    {
+      "title": "咖啡提貨券到期進度提醒",
+      "status": "待處理",
+      "next_step": "",
+      "owner_role": "",
+      "blocked_reason": "-",
+      "priority": "normal",
+      "type": "task",
+      "due": "-",
+      "time": "-",
+      "freq": "-",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -480,7 +508,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -494,7 +522,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     },
     {
@@ -508,7 +536,7 @@
       "due": "-",
       "time": "-",
       "freq": "-",
-      "updated_at": "2026-02-23T10:55:33Z",
+      "updated_at": "2026-02-23T14:04:11Z",
       "source": "auto"
     }
   ]
